--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -30,6 +30,7 @@
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/9/n11778295.md#1">伊朗导弹袭基地 美国国防部披露更多细节</a><br>
 <br><p><a href="https://github.com/crlhi259/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
+<a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11808161.md#1">武汉肺炎 平安证券高管父亲12小时变危重</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11808116.md#1">【新闻看点】一关键因素 孟晚舟被引渡概率增</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11807888.md#1">大陆劣质香菇“洗产地”入台湾  扰乱市场</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11807986.md#1">中国猪蹦极引爆互联网 国内外网民都吐槽</a><br>
@@ -41,7 +42,6 @@
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11807770.md#1">武汉肺炎爆发 钟南山确认人传人 习李发话</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11807950.md#1">广州八院取消休假 准备收治新型肺炎患者</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11807823.md#1">【新闻看点】战狼外交再碰壁 瑞典欲逐桂从友</a><br>
-<a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11807463.md#1">贸战熄火？专家：美架好“机枪”等中共违规</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11808035.md#1">孟晚舟引渡案今开庭 预示华为艰难一年之始</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11807963.md#1">武汉肺炎确认人传人 世卫推广自保预防措施</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11807842.md#1">一名英国男子在泰国感染肺炎</a><br>
@@ -62,7 +62,7 @@
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/1/n11761234.md#1">【思想领袖】陈日君：港府只是一个傀儡</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11805358.md#1">与轧故宫红三代同名遭骂 女星高露无辜躺枪</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/19/12/29/n11753795.md#1">从“近海”到“两极” 中共海军战略内幕</a><br>
-<a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801312.md#1">【武汉肺炎 | 持续更新】武汉肺炎蔓延！突然增加136病例 增1死亡</a><br>
+<a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801312.md#1">【更新】武汉肺炎：突增136病例 增1死亡</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11805938.md#1">太贵怕被偷？农民背着猪耕田 笑翻网络</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11805786.md#1">大陆旅游业萧条 “途牛网”亏损裁员</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11805767.md#1">港警再放弹 中共挑衅世界 料掀国际制裁潮</a><br>
