--- a/gb/news2008.md
+++ b/gb/news2008.md
@@ -11,7 +11,7 @@
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11806464.md#1" target="_blank">两名美国男子被拍到“吊车尾” 违法又危险</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11806464.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-56025846-150x120.jpg" align ="left"></a>台湾人常以“吊车尾”来形容表现欠佳或成绩倒数第一。而在现实生活中，真的有人“吊车尾”。在美国马里兰州，最近就有两名年轻男子被发现吊在一辆公车后面，试图搭便车，此举不但违法，而且很危险。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月20日 1:41 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/13/n11789191.md#1" target="_blank">丈夫女儿车祸丧生 澳母亲二十年后仍自责</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/13/n11789191.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/Kerry-150x120.jpg" align ="left"></a>20多年前，一场车祸夺去了诺顿（Kerry Norton）丈夫和女儿的生命。过去10多年来，作为维州道路创伤支持服务机构（RTSSV）志愿者，诺顿一直用自己的亲身经历告诫人们，一定要谨慎开车。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月20日 10:58 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/13/n11791510.md#1" target="_blank">19年辛勤培育 澳果农收获首批无核荔枝</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/13/n11791510.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/lychee-3399362_1920-150x120.jpg" align ="left"></a>19年前，昆士兰北部果农迪克森（Tibby Dixon）花5,000澳元从中国购买了一株荔枝树，经过10多年的辛勤培育，他终于收获了澳洲第一批无核荔枝。据澳广新闻（ABC）报导，迪克森不仅培育出了无核荔枝，还培育出多个荔枝品种，并将幼苗出售给了其他果农种植。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月20日 10:50 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801312.md#1" target="_blank">【武汉肺炎 | 持续更新】武汉肺炎蔓延！突然增加136病例 增1死亡</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801312.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1097066394-150x120.jpg" align ="left"></a>中国武汉去年12月爆发不明肺炎，今年1月8日确定为新型冠状病毒，世界卫生组织13日将此病毒定名为“2019新型冠状病毒”（2019－nCoV）。目前出现2例死亡病例，该新型冠状病毒已有扩散趋势，泰国和日本近日先后确诊个案，患者皆到过武汉。但在中国仍只有武汉有疫情消息。本文将持续更新关于武汉肺炎疫情的最新进展。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月20日 8:57 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801312.md#1" target="_blank">【持续更新】武汉肺炎：突增136病例 增1死亡</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801312.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1097066394-150x120.jpg" align ="left"></a>中国武汉去年12月爆发不明肺炎，今年1月8日确定为新型冠状病毒，世界卫生组织13日将此病毒定名为“2019新型冠状病毒”（2019－nCoV）。目前出现2例死亡病例，该新型冠状病毒已有扩散趋势，泰国和日本近日先后确诊个案，患者皆到过武汉。但在中国仍只有武汉有疫情消息。本文将持续更新关于武汉肺炎疫情的最新进展。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月20日 8:57 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11805380.md#1" target="_blank">经典年菜料理 (1) ～软嫩多汁的红烧肉</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11805380.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/f7cf1f5dfb490086f84a57e2de3af341-150x120.jpg" align ="left"></a>好媳妇就要学会这一道经典年菜料理，入口即化、软嫩多汁的红烧肉。
 让人忍不住饭一口接一口～
 炒糖色让红烧肉油亮亮吃起来香甜不死咸，带有淡淡的焦糖香，加入话梅更解腻。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月20日 12:01 AM			</td></tr>
