--- a/gb/news392_2.md
+++ b/gb/news392_2.md
@@ -27,10 +27,10 @@
 
 当初九合一选举之时，韩国瑜表现.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 11:11 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11796487.md#1" target="_blank">吴惠林：共产末日预言</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11796487.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/810242007491663-150x120.jpg" align ="left"></a>“国宝级经济学家”于宗先院士于2019年8月3日离世，直到9月16日家属才透露消息，而一切后事都已办理完毕。诸多门生故旧在婉惜之余，觉得有必要办个追思纪念会。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 8:01 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11802197.md#1" target="_blank">郑纯清：爱国主义最终要党命</a><br></h3>总统副总理，贸易签协议。
-为何不对等？里边何猫腻？
-中共死要面，川普给够你。
-美国讲效益，习总还实利。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 12:55 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11795934.md#1" target="_blank">王友群：吴花燕因贫去世 赖小民一房藏2亿</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11795934.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/8ad5fdd9ed9d103f27d08838c8dbd987-600x400-2-150x120.jpg" align ="left"></a>近日，大陆两则新闻很轰动：
+
+1月13日下午，体重仅43斤的贵州女大学生吴花燕去世了，年仅24岁。她因贫困曾用糟辣椒拌白米饭吃了5年。她在一首诗中写着自己的梦想：“我将回到云贵高原……在那里会有一艘丰衣足食的小船，带我驶向远方。”
+1月13日晚上，中共央视播出的中纪委电视专题片中，中国华融资产管理股份公司原党委书.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 7:10 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11802156.md#1" target="_blank">关乐：亡党不是梦——由中共要求党章放床头想到的</a><br></h3>同床都异梦，
 全国统一梦。
 人脑不入梦，
