--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -15,7 +15,7 @@ https://youtu.be/CdOVrwwBVk8
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11807369.md#1" target="_blank">芳苑故事进行式</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11807369.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/4ab0a8adce5e79447cd31216aa8dc9f4-150x120.jpg" align ="left"></a>早在国中毕业后，我也跟随着家乡人的脚步，到外地去流浪。二十几年的闯荡，我无能开创一片天地，反而到处碰壁，弄得身心俱疲，不得已只好逃回家乡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月20日 7:20 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11807366.md#1" target="_blank">年味飘香</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11807366.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/1902061641102483-150x120.jpg" align ="left"></a>当了父亲之后，我发现亲子间的关系是影响孩子心理健康的第一要素，父母对孩子的影响力，远比我们想像的还要大得多。由此可见我们在孩子心中的分量之大。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月20日 7:16 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11799616.md#1" target="_blank">胡质胡威 父子二人 清廉如水 家风高洁</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11799616.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/1609271151402483-150x120.jpg" align ="left"></a>为官清廉，这是古代做人的标准之一。当官的人，能做到清廉才算好人，才能传家，并身后流芳。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月20日 5:13 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/19/12/25/n11743970.md#1" target="_blank">祖父没上过学  却能自己治好白内障 “龙飞鳯舞”秀书法</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/19/12/25/n11743970.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/069e0e5922a6ea684f7d523026050cb3-150x120.jpg" align ="left"></a>我的祖父一生备极辛劳，不但严以律己，也严格要求家人，生活起居，处处要求做到位，不得马虎。因为这种严肃的性格，本来命中流年批阳寿只能活到四十七岁，但因他行善积德，上天有眼，添寿一纪年。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月20日 1:54 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/19/12/25/n11743970.md#1" target="_blank">祖父没上过学 自己治好白内障 “龙飞鳯舞”秀书法</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/19/12/25/n11743970.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/069e0e5922a6ea684f7d523026050cb3-150x120.jpg" align ="left"></a>我的祖父一生备极辛劳，不但严以律己，也严格要求家人，生活起居，处处要求做到位，不得马虎。因为这种严肃的性格，本来命中流年批阳寿只能活到四十七岁，但因他行善积德，上天有眼，添寿一纪年。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月20日 1:54 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/19/9/17/n11526369.md#1" target="_blank">【医案】心香缭缭</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/19/9/17/n11526369.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/1406130856421886-150x120.jpg" align ="left"></a>我停顿一下又说：“你知道生与死之间，有多远？一瞬间！你知道天堂与地狱之间，有多远？一念间！能放下昨日的我，甚至放下懊恼的心，那也是一种强烈的执著。最好潜心找回自我，每个人心中都有一座佛山，自己心香缭缭，净化身心灵，才不虚此生。”我看扑克人的眼睛都红了！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月20日 9:53 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/12/n11787378.md#1" target="_blank">天地清明引(173) 东流水－逝水东流4</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/12/n11787378.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2003/12/00645LlLty7211TT1uv3f690-150x120.jpg" align ="left"></a>昭雪心神哀极，十指滴血，抬眼婆娑，壮士血战于前，心愈勇，志愈坚。莫少飞拼尽最后一丝余力，誓死护卫，大义凛然，知死无惧。一众兵士为其气概所震慑，持刀愈颤，不敢上前。孙严芳大怒，令弓弩手，万箭连放。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月20日 8:00 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11805484.md#1" target="_blank">【中华商道】唐朝一位药商名闻长安的缘由</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11805484.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/01/shutterstock_326657849-150x120.jpg" align ="left"></a>唐朝中叶，都城长安西市中有一位名叫宋清的药商，名闻长安城，当时长安坊间有这样一句话：“人有义声，卖药宋清。”身为一名普通的药商，他缘何能获得如此高的评价？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月20日 2:30 AM			</td></tr>
